WebCore/platform/text/qt/TextBreakIteratorQt.cpp
@@ -63,6 +63,11 @@ namespace WebCore {
         return static_cast<TextBreakIterator*>(iterator);
     }
 
+    TextBreakIterator* cursorMovementIterator(const UChar* string, int length)
+    {
+        return characterBreakIterator(string, length);
+    }
+
     TextBreakIterator* lineBreakIterator(const UChar* string, int length)
     {
         static QTextBoundaryFinder *iterator = 0;
@@ -248,6 +253,11 @@ TextBreakIterator* characterBreakIterator(const UChar* string, int length)
     iterator->layout.setText(QString(reinterpret_cast<const QChar*>(string), length));
     
     return iterator;
+}
+
+TextBreakIterator* cursorMovementIterator(const UChar* string, int length)
+{
+    return characterBreakIterator(string, length);
 }
 
 TextBreakIterator* lineBreakIterator(const UChar*, int)
